==> no-one-wu/GD32F407-EnvironmentalMonitor/applications/actuate/OLED/oled.c <==
#include "oled.h"
#include "oledfont.h"
#include "stdio.h"
#include "rtthread.h"
#include <rtdevice.h>
#include <stdio.h>
#include <stdarg.h>
#define OLED_I2C_BUS_NAME          "i2c1"  /* 传感器连接的I2C总线设备名称 */

void OLED_WR_Byte(uint8_t dat, uint8_t cmd_or_data)
{

    struct rt_i2c_msg msgs;
    uint8_t tx_buf[2] = { cmd_or_data, dat };

    msgs.addr = I2C_OLED >> 1;
    msgs.flags = RT_I2C_WR;
    msgs.buf = tx_buf;
    msgs.len = 2;
    /* 调用I2C设备接口传输数据 */
    rt_i2c_transfer(i2c1_bus, &msgs, 1);
}

void OLED_Display_On(void)
{
    OLED_WR_Byte(0X8D, IIC_OLED_CMD); //SET DCDC命令
    OLED_WR_Byte(0X14, IIC_OLED_CMD); //DCDC ON
    OLED_WR_Byte(0XAF, IIC_OLED_CMD); //DISPLAY ON
}

void OLED_Display_Off(void)
{
    OLED_WR_Byte(0X8D, IIC_OLED_CMD); //SET DCDC命令
    OLED_WR_Byte(0X10, IIC_OLED_CMD); //DCDC OFF
    OLED_WR_Byte(0XAE, IIC_OLED_CMD); //DISPLAY OFF
}

void OLED_Init(void)
{
    OLED_Hardware_Init();
    rt_thread_mdelay(100);

    OLED_WR_Byte(0xAE, IIC_OLED_CMD); //--turn off oled panel
    OLED_WR_Byte(0x00, IIC_OLED_CMD); //---set low column address
    OLED_WR_Byte(0x10, IIC_OLED_CMD); //---set high column address
    OLED_WR_Byte(0x40, IIC_OLED_CMD); //--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
    OLED_WR_Byte(0x81, IIC_OLED_CMD); //--set contrast control register
    OLED_WR_Byte(0xCF, IIC_OLED_CMD); // Set SEG Output Current Brightness
    OLED_WR_Byte(0xA1, IIC_OLED_CMD); //--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
    OLED_WR_Byte(0xC8, IIC_OLED_CMD); //Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
    OLED_WR_Byte(0xA6, IIC_OLED_CMD); //--set normal display
    OLED_WR_Byte(0xA8, IIC_OLED_CMD); //--set multiplex ratio(1 to 64)
    OLED_WR_Byte(0x3f, IIC_OLED_CMD); //--1/64 duty

    OLED_WR_Byte(0x81, IIC_OLED_CMD);   //对比度设置
    OLED_WR_Byte(0xFF, IIC_OLED_CMD);   //1~255;默认0X7F (亮度设置,越大越亮)

    OLED_WR_Byte(0xD3, IIC_OLED_CMD); //-set display offset   Shift Mapping RAM Counter (0x00~0x3F)
    OLED_WR_Byte(0x00, IIC_OLED_CMD); //-not offset
    OLED_WR_Byte(0xd5, IIC_OLED_CMD); //--set display clock divide ratio/oscillator frequency
    OLED_WR_Byte(0x80, IIC_OLED_CMD); //--set divide ratio, Set Clock as 100 Frames/Sec
    OLED_WR_Byte(0xD9, IIC_OLED_CMD); //--set pre-charge period
    OLED_WR_Byte(0xF1, IIC_OLED_CMD); //Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
    OLED_WR_Byte(0xDA, IIC_OLED_CMD); //--set com pins hardware configuration
    OLED_WR_Byte(0x12, IIC_OLED_CMD);
    OLED_WR_Byte(0xDB, IIC_OLED_CMD); //--set vcomh
    OLED_WR_Byte(0x40, IIC_OLED_CMD); //Set VCOM Deselect Level
    OLED_WR_Byte(0x20, IIC_OLED_CMD); //-Set Page Addressing Mode (0x00/0x01/0x02)
    OLED_WR_Byte(0x02, IIC_OLED_CMD); //
    OLED_WR_Byte(0x8D, IIC_OLED_CMD); //--set Charge Pump enable/disable
    OLED_WR_Byte(0x14, IIC_OLED_CMD); //--set(0x10) disable
    OLED_WR_Byte(0xA4, IIC_OLED_CMD); // Disable Entire Display On (0xa4/0xa5)
    OLED_WR_Byte(0xA6, IIC_OLED_CMD); // Disable Inverse Display On (0xa6/a7)
    OLED_WR_Byte(0xAF, IIC_OLED_CMD); //--turn on oled panel

    OLED_WR_Byte(0xAF, IIC_OLED_CMD); /*display ON*/
    OLED_Clear();

}
